--- a/index.html
+++ b/index.html
@@ -19,19 +19,21 @@
       <div class="header__square-pic"></div>
     </header>
     <main class="main">
-      <section class="description">
-        <h4 class="two-columns__brief">Главные проблемы в обучении</h4>
-        <div class="two-columns__main-text">
-          <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
-          <p class="two-columns__paragraph">
+      <div class="two-colums">
+        <section class="description">
+          <h4 class="two-columns__brief">Главные проблемы в обучении</h4>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
+            <p class="two-columns__paragraph">
             <span class="two-columns__span-accent">Вывод:</span>
             учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
-          <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
-        </div>
-      </section>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
+          </div>
+        </section>
+      </div>
       <section class="digits">
-        <h5 class="section__title">Цифры и факты</h5>
-        <p class="section__subtitle">Про учёбу и мозг</p>
+        <h5 class="section-title">Цифры и факты</h5>
+        <p class="section-subtitle">Про учёбу и мозг</p>
         <div class="table">
           <div class="table__cell">
             <h6 class="table__heading">86 миллиардов</h6>
@@ -72,52 +74,52 @@
       <section class="feinman">
         <h2 class="feinman__title">Метод Фейнмана</h2>
         <p class="feinman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feinman__link">Подробнее &#8594</a>
+        <a href="#" class="feinman__link">Подробнее &#8594;</a>
         <img src="./images/feynman.png" class="feinman__image" alt="Ричард Фейнман">
       </section>
       <section class="kaufman">
-        <h3 class="section__title section_title_theme_dark">Принципы обучения</h3>
-        <p class="section__subtitle section_subtitle_theme_dark">от Джоша Кауфмана</p>
+        <h3 class="section-title section-title_theme_dark">Принципы обучения</h3>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <div class="table table_theme_dark">
-          <div class="table__cell table_cell_theme_dark">
-            <h6 class="table__heading table_heading_theme_dark">1</h6>
-            <div class="table__text table_text_theme_dark">Выберите привлекательный проект.</div>
+          <div class="table__cell table__cell_theme_dark">
+            <h6 class="table__heading table__heading_theme_dark">1</h6>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </div>
-          <div class="table__cell table_cell_theme_dark">
-            <h6 class="table__heading table_heading_theme_dark">2</h6>
-            <div class="table__text table_text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</div>
+          <div class="table__cell table__cell_theme_dark">
+            <h6 class="table__heading table__heading_theme_dark">2</h6>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
-          <div class="table__cell table_cell_theme_dark">
-            <h6 class="table__heading table_heading_theme_dark">3</h6>
-            <div class="table__text table_text_theme_dark">Определите целевой уровень мастерства.</div>
+          <div class="table__cell table__cell_theme_dark">
+            <h6 class="table__heading table__heading_theme_dark">3</h6>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </div>
-          <div class="table__cell table_cell_theme_dark">
-            <h6 class="table__heading table_heading_theme_dark">4</h6>
-            <div class="table__text table_text_theme_dark">Разбейте навык на элементы.</div>
+          <div class="table__cell table__cell_theme_dark">
+            <h6 class="table__heading table__heading_theme_dark">4</h6>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </div>
-          <div class="table__cell table_cell_theme_dark">
-            <h6 class="table__heading table_heading_theme_dark">5</h6>
-            <div class="table__text table_text_theme_dark">Приготовьте всё необходимое для занятий.</div>
+          <div class="table__cell table__cell_theme_dark">
+            <h6 class="table__heading table__heading_theme_dark">5</h6>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </div>
-          <div class="table__cell table_cell_theme_dark">
-            <h6 class="table__heading table_heading_theme_dark">6</h6>
-            <div class="table__text table_text_theme_dark">Устраните препятствия для занятий.</div>
+          <div class="table__cell table__cell_theme_dark">
+            <h6 class="table__heading table__heading_theme_dark">6</h6>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </div>
-          <div class="table__cell table_cell_theme_dark">
-            <h6 class="table__heading table_heading_theme_dark">7</h6>
-            <div class="table__text table_text_theme_dark">Выделите специальное время для занятий.</div>
+          <div class="table__cell table__cell_theme_dark">
+            <h6 class="table__heading table__heading_theme_dark">7</h6>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </div>
-          <div class="table__cell table_cell_theme_dark">
-            <h6 class="table__heading table_heading_theme_dark">8</h6>
-            <div class="table__text table_text_theme_dark">Создайте быстрые петли обратной связи.</div>
+          <div class="table__cell table__cell_theme_dark">
+            <h6 class="table__heading table__heading_theme_dark">8</h6>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </div>
-          <div class="table__cell table_cell_theme_dark">
-            <h6 class="table__heading table_heading_theme_dark">9</h6>
-            <div class="table__text table_text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</div>
+          <div class="table__cell table__cell_theme_dark">
+            <h6 class="table__heading table__heading_theme_dark">9</h6>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </div>
-          <div class="table__cell table_cell_theme_dark">
-            <h6 class="table__heading table_heading_theme_dark">10</h6>
-            <div class="table__text table_text_theme_dark">Уделяйте внимание количеству и скорости.</div>
+          <div class="table__cell table__cell_theme_dark">
+            <h6 class="table__heading table__heading_theme_dark">10</h6>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
         <div class="kaufman__triangle"></div>
@@ -125,11 +127,11 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column footer_column_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
           <p class="footer__author">&mdash; &copy; 2020 Kaschitskiy Maxim</p>
         </div>
-        <div class="footer__column footer_column_content_info">
+        <nav class="footer__column footer__column_content_info">
           <h6 class="footer__column-heading">О Практикуме</h6>
           <ul class="footer__column-links">
             <li>
@@ -142,26 +144,23 @@
               <a class="footer__column-link" href="#">Наставники</a>
             </li>
           </ul>
-        </div>
+        </nav>
         <div class="footer__column footer__column_content_social">
           <h6 class="footer__column-heading">Соцсети</h6>
             <ul class="footer__social-links">
               <li>
-                <a href="#" class="footer__social-link">
-                  <img src="./images/facebook_color_white.svg" class="footer__social-icon" alt="fb-icon">
-                  Facebook
+                <a href="#" class="footer__column-link">
+                  <img src="./images/facebook_color_white.svg" class="footer__social-icon" alt="fb-icon">Facebook
                 </a>
               </li>
               <li>
-                <a href="#" class="footer__social-link">
-                  <img src="./images/vk_color_white.svg" class="footer__social-icon" alt="vk-icon">
-                  ВКонтакте
+                <a href="#" class="footer__column-link">
+                  <img src="./images/vk_color_white.svg" class="footer__social-icon" alt="vk-icon">ВКонтакте
                 </a>
               </li>
-              <li class="footer__social-link">
-                <a href="#" class="footer__social-link">
-                  <img src="./images/instagram_color_white.svg" class="footer__social-icon" alt="ig-icon">
-                  Instagram
+              <li>
+                <a href="#" class="footer__column-link">
+                  <img src="./images/instagram_color_white.svg" class="footer__social-icon" alt="ig-icon">Instagram
                 </a>
               </li>
             </ul>
