--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <img src="images/cards-interliving.png" class="cards__image" alt="Илюстрация к третьей практике">
             </div>
             <div class="cards__title">Интерливинг</div>
-            <div class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</div>  
+            <div class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</div>
           </div>
           <div class="cards__item">
             <div class="cards__mask">
@@ -141,7 +141,7 @@
           <div class="khan__quote-author">Джордж Лукас</div>
           <div class="khan__quote-auhor-subline">Кинорежиссер, продюсер</div>
           <div class="khan__book-container">
-            <img src="images/khan-book.jpg" class="khan__book-pic">
+            <img src="images/khan-book.jpg" class="khan__book-pic" alt="Книга Салмана Хана: Весь мир - школа. Преобразованное образование">
             <a href="#" class="khan__buy-link header__link">Купить книгу &#8594;</a>     
           </div>
         </div>
@@ -229,17 +229,17 @@
             <ul class="footer__social-links">
               <li>
                 <a href="#" class="footer__column-link">
-                  <img src="./images/facebook_color_white.svg" class="footer__social-icon" alt="fb-icon">Facebook
+                  <img src="./images/facebook_color_white.svg" class="footer__social-icon" alt="Фэйсбук - лого">Facebook
                 </a>
               </li>
               <li>
                 <a href="#" class="footer__column-link">
-                  <img src="./images/vk_color_white.svg" class="footer__social-icon" alt="vk-icon">ВКонтакте
+                  <img src="./images/vk_color_white.svg" class="footer__social-icon" alt="ВК - лого">ВКонтакте
                 </a>
               </li>
               <li>
                 <a href="#" class="footer__column-link">
-                  <img src="./images/instagram_color_white.svg" class="footer__social-icon" alt="ig-icon">Instagram
+                  <img src="./images/instagram_color_white.svg" class="footer__social-icon" alt="Инстаграм - лого">Instagram
                 </a>
               </li>
             </ul>
