--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main class="main">
       <section class="description">
         <div class="two-columns">
-          <h4 class="two-columns__brief">Главные проблемы в обучении</h4>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
             <p class="two-columns__paragraph">
@@ -31,52 +31,52 @@
         </div>
       </section>
       <section class="techniques">
-        <h5 class="section-title">Техники обучения</h5>
+        <h2 class="section-title">Техники обучения</h2>
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <div class="cards">
           <div class="cards__item">
             <div class="cards__mask">
               <img src="images/cards-attention.png" class="cards__image" alt="Илюстрация к первой практике">
             </div>
-            <div class="cards__title">Два вида внимания</div>
-            <div class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</div>  
+            <h6 class="cards__title">Два вида внимания</h6>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>  
           </div>
           <div class="cards__item cards__item_position_center">
             <div class="cards__mask">
               <img src="images/cards-recall.png" class="cards__image" alt="Илюстрация ко второй практике">
             </div>
-            <div class="cards__title">Recall</div>
-            <div class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</div>  
+            <h6 class="cards__title">Recall</h6>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>  
           </div>
           <div class="cards__item">
             <div class="cards__mask">
               <img src="images/cards-interliving.png" class="cards__image" alt="Илюстрация к третьей практике">
             </div>
-            <div class="cards__title">Интерливинг</div>
-            <div class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</div>
+            <h6 class="cards__title">Интерливинг</h6>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </div>
           <div class="cards__item">
             <div class="cards__mask">
               <img src="images/cards-question.png" class="cards__image" alt="Илюстрация к четвёртой практике">
             </div>
-            <div class="cards__title">Вопросы</div>
-            <div class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</div>  
+            <h6 class="cards__title">Вопросы</h6>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>  
           </div>
           <div class="cards__item cards__item_position_center">
             <div class="cards__mask">
               <img src="images/cards-competence.png" class="cards__image" alt="Илюстрация к пятой практике">
             </div>
-            <div class="cards__title">Иллюзия компетентности</div>
-            <div class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</div>  
+            <h6 class="cards__title">Иллюзия компетентности</h6>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>  
           </div>
         </div>
       </section>
       <section class="video">
-        <h5 class="section-title">Видео нa TED</h5>
+        <h3 class="section-title">Видео нa TED</h3>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video__clips"></iframe>
-          <iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video__clips"></iframe>
+          <iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen class="video__clips"></iframe>
+          <iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen class="video__clips"></iframe>
         </div>
       </section>
       <section class="oakley">
@@ -88,7 +88,7 @@
         </div>
       </section>
       <section class="feinman">
-        <h2 class="feinman__title">Метод Фейнмана</h2>
+        <h5 class="feinman__title">Метод Фейнмана</h5>
         <p class="feinman__subtitle">Выучить и не забыть.</p>
         <a href="#" class="feinman__link">Подробнее &#8594;</a>
         <img src="./images/feynman.png" class="feinman__image" alt="Ричард Фейнман">
@@ -135,8 +135,8 @@
       </section>
       <section class="khan">
         <div class="khan__container">
-          <div class="khan__author">Салман Хан</div>
-          <div class="khan__title">Весь мир — школа</div>
+          <h5 class="khan__author">Салман Хан</h5>
+          <p class="khan__title">Весь мир — школа</p>
           <div class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</div>
           <div class="khan__quote-author">Джордж Лукас</div>
           <div class="khan__quote-auhor-subline">Кинорежиссер, продюсер</div>
