--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href="#" class="header__link">Узнать &#8594;</a>
+        <a href="#" class="header__link">Узнать &rarr;</a>
       </p>
       <img src="./images/header-image.png" class="header__main-illustration" alt="«Опять двойка» Фёдора Решетникова">
       <div class="header__square-pic rotation"></div>
@@ -22,11 +22,11 @@
         <div class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
-            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
+              <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
             <p class="two-columns__paragraph">
             <span class="two-columns__span-accent">Вывод:</span>
-            учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
-            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
+                учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+              <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
       </section>
@@ -35,37 +35,37 @@
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <div class="cards">
           <div class="cards__item">
-            <div class="cards__mask">
+
               <img src="images/cards-attention.png" class="cards__image" alt="Илюстрация к первой практике">
-            </div>
+
             <h6 class="cards__title">Два вида внимания</h6>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>  
           </div>
-          <div class="cards__item cards__item_position_center">
-            <div class="cards__mask">
+          <div class="cards__item">
+
               <img src="images/cards-recall.png" class="cards__image" alt="Илюстрация ко второй практике">
-            </div>
+
             <h6 class="cards__title">Recall</h6>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>  
           </div>
           <div class="cards__item">
-            <div class="cards__mask">
+
               <img src="images/cards-interliving.png" class="cards__image" alt="Илюстрация к третьей практике">
-            </div>
+
             <h6 class="cards__title">Интерливинг</h6>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </div>
           <div class="cards__item">
-            <div class="cards__mask">
+
               <img src="images/cards-question.png" class="cards__image" alt="Илюстрация к четвёртой практике">
-            </div>
+
             <h6 class="cards__title">Вопросы</h6>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>  
           </div>
-          <div class="cards__item cards__item_position_center">
-            <div class="cards__mask">
+          <div class="cards__item">
+
               <img src="images/cards-competence.png" class="cards__image" alt="Илюстрация к пятой практике">
-            </div>
+
             <h6 class="cards__title">Иллюзия компетентности</h6>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>  
           </div>
@@ -75,74 +75,74 @@
         <h3 class="section-title">Видео нa TED</h3>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen class="video__clips"></iframe>
-          <iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen class="video__clips"></iframe>
+          <iframe src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen class="video__iframe"></iframe>
+          <iframe src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen class="video__iframe"></iframe>
         </div>
       </section>
       <section class="oakley">
         <div class="two-columns">
           <h4 class="two-columns__brief two-columns__brief_position_oakley">История Барбары Оакли.</h4>
           <div class="two-columns__main-text two-columns__main-text_position_oakley">
-            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+              <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
           </div>
         </div>
       </section>
       <section class="feinman">
-        <h5 class="feinman__title">Метод Фейнмана</h5>
+        <h2 class="feinman__title">Метод Фейнмана</h2>
         <p class="feinman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feinman__link">Подробнее &#8594;</a>
+        <a href="#" class="feinman__link">Подробнее &rarr;</a>
         <img src="./images/feynman.png" class="feinman__image" alt="Ричард Фейнман">
       </section>
       <section class="digits">
-        <h5 class="section-title">Цифры и факты</h5>
+        <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учёбу и мозг</p>
         <div class="table">
           <div class="table__cell">
-            <h6 class="table__heading">86 миллиардов</h6>
+            <h3 class="table__heading">86 миллиардов</h3>
             <p class="table__text">Число нейронов в мозге человека</p>
           </div>
           <div class="table__cell">
-          <h6 class="table__heading">2.1 миллиарда</h6>
+            <h3 class="table__heading">2.1 миллиарда</h3>
             <p class="table__text">Число нуждающихся в повышении квалификации</p>
             <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
-            <h6 class="table__heading">1000 терабайт</h6>
+            <h3 class="table__heading">1000 терабайт</h3>
             <p class="table__text">Объём памяти человека</p>
           </div>
           <div class="table__cell">
-            <h6 class="table__heading">500 триллионов</h6>
+            <h3 class="table__heading">500 триллионов</h3>
             <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </div>
           <div class="table__cell">
-            <h6 class="table__heading">420 миллионов</h6>
+            <h3 class="table__heading">420 миллионов</h3>
             <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
             <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
-            <h6 class="table__heading">17–20 лет</h6>
+            <h3 class="table__heading">17–20 лет</h3>
             <p class="table__text">Пик обучаемости</p>
           </div>
           <div class="table__cell">
-            <h6 class="table__heading">1885 год</h6>
+            <h3 class="table__heading">1885 год</h3>
             <p class="table__text">Открытие кривой забывания</p>
           </div>
           <div class="table__cell">
-            <h6 class="table__heading">1889 год</h6>
+            <h3 class="table__heading">1889 год</h3>
             <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
       </section>
       <section class="khan">
         <div class="khan__container">
-          <h5 class="khan__author">Салман Хан</h5>
-          <p class="khan__title">Весь мир — школа</p>
-          <div class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</div>
-          <div class="khan__quote-author">Джордж Лукас</div>
-          <div class="khan__quote-auhor-subline">Кинорежиссер, продюсер</div>
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img src="images/khan-book.jpg" class="khan__book-pic" alt="Книга Салмана Хана: Весь мир - школа. Преобразованное образование">
-            <a href="#" class="khan__buy-link header__link">Купить книгу &#8594;</a>     
+            <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>     
           </div>
         </div>
       </section>
@@ -196,12 +196,28 @@
       <section class="resources">
         <h5 class="section-title">Полезные ресурсы</h5>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <div class="resources__logo-zone">
-          <img src="./images/logo/resources-arzamas.svg" class="resources__logo" alt="«Арзамас» — просветительский проект">
-          <img src="./images/logo/resources-n1.svg" class="resources__logo" alt="«Н+1» — научно-популярное развлекательное издание">
-          <img src="./images/logo/resources-strelka.svg" class="resources__logo" alt="«Стрелка» — негосударственное образовательное учреждение">
-          <img src="./images/logo/resources-polka.svg" class="resources__logo" alt="«Полка» — образовательный проект о русской литературе">
-        </div>
+        <ul class="resources__logo-zone">
+          <li>
+            <a href="#">
+              <img src="./images/logo/resources-arzamas.svg" class="resources__logo" alt="«Арзамас» — просветительский проект">
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/logo/resources-n1.svg" class="resources__logo" alt="«Н+1» — научно-популярное развлекательное издание">
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/logo/resources-strelka.svg" class="resources__logo" alt="«Стрелка» — негосударственное образовательное учреждение">
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/logo/resources-polka.svg" class="resources__logo" alt="«Полка» — образовательный проект о русской литературе">
+            </a>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="footer">
